crates/but-api-macros/tests/tests/ui/fail/base_reference_not_context.stderr
error: Only `&Context`, `&but_ctx::Context`, `&ThreadSafeContext`, or `&gix::refs::FullNameRef` may be references
 --> tests/ui/fail/base_reference_not_context.rs:9:28
  |
9 | fn wrong_reference(_value: &String) -> anyhow::Result<String> {
  |                            ^^^^^^^
